<resources>
    <string name="app_name">Retrofit2</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="waiting">Waiting...</string>
    <string name="creating_account">Creating Account ...</string>
    <string name="no_name">No Name</string>
    <string name="error_network">There is something wrong with internet connection !</string>
    <string name="welcome">Welcome</string>
    <string name="total_sentences">Sentences:</string>
    <string name="total_duration">Duration:</string>
    <string name="my_top">Top:</string>
    <string name="seconds">s</string>
    <string name="practice">Practice</string>
    <string name="test">Test</string>
    <string name="make_a_test">Make a Test</string>
    <string name="today_challenge">Today Challenge</string>
    <string name="inventory">Your Inventory</string>
    <string name="today_top">Today TOP</string>
    <string name="account_setting">Account Setting</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Sign up</string>
    <string name="register_new_account">Register an account</string>
    <string name="submitting">Submitting......</string>
    <string name="updated_your_score">Updated your score</string>
    <string name="before_test_better">Your before test is better than this test</string>
    <string name="checking">Checking...</string>
    <string name="auto_next">Auto next</string>
    <string name="your_voice">Your voice</string>
    <string name="english_sentence">English sentence</string>
    <string name="translation">Translation</string>
    <string name="try_again">Try Again</string>
    <string name="next">Next</string>
    <string name="forgot_password">Forgot password</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_oral">Oral Test</string>
    <string name="title_activity_html_cleaner">HtmlCleanerActivity</string>
    <string name="log_in_with_facebook">Log in with Facebook</string>
    <string name="link_with_facebook">Link with Facebook</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="whats_your_name">What\'s Your Name?</string>
    <string name="explain_email_address">You will use this email when you log in and if you ever need to reset your password.</string>
    <string name="enter_email_address">Enter Your Email Address</string>
    <string name="explain_name">This name will be displayed for you!</string>
    <string name="explain_password">Hi, %s! \n\rNow, Enter Your Password </string>
    <string name="password">Password</string>
    <string name="error_less_than_6_letters">Your password must have at least 6 letters.</string>
    <string name="password_not_match">Password does not match the confirm password</string>
    <string name="choose_a_password">Choose a Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="explain_gender">Providing your gender creates the best App experience for you.</string>
    <string name="whats_your_gender">What\'s your Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="create_account">Create Account</string>
    <string name="error_create_account">Error creating account</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="see_more">See more</string>
    <string name="explain_wrong">Result:GREEN is correct, RED is wrong</string>
    <string name="explain_wrong_2">This is the result. GREEN is correct, RED is wrong. OK</string>
    <string name="explain_start_record">Click Start Button and read the sentence.</string>
    <string name="exam">Exam</string>
    <string name="record">Record</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="invalid_email_address">InValid Email Address</string>
    <string name="error_reset_pw">Can not reset password at this time !!!</string>
    <string name="success_reset_pw">An email was successfully sent with reset instructions.</string>
    <string name="profile">Profile</string>
    <string name="link_to_your_fb">Link To Your Facebook</string>
</resources>
