<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_ll_gender"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="24dp"
    android:orientation="vertical"
    android:background="@color/md_grey_200"
    android:padding="16dp">


    <TextView
        style="@style/AppTextViewStyle.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whats_your_gender" />

    <TextView
        style="@style/AppTextViewStyle.Normal.Grey_600"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="?selectableItemBackground"
        android:gravity="center_horizontal"
        android:text="@string/explain_gender" />
    <View
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300"/>


    <LinearLayout
        android:id="@+id/sign_up_view_male"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextViewStyle.Normal.Grey_600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/ic_gender_male"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_gender_male"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/male"
            android:textStyle="bold" />

        <RadioButton
            android:clickable="false"
            android:layout_gravity="center"
            android:id="@+id/sign_up_check_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textIsSelectable="false" />


    </LinearLayout>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300"/>

    <LinearLayout
        android:id="@+id/sign_up_view_female"
        android:background="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            style="@style/AppTextViewStyle.Normal.Grey_600"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="?selectableItemBackground"
            android:drawableLeft="@drawable/ic_gender_female"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_gender_female"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:padding="12dp"
            android:text="@string/female"
            android:textStyle="bold" />

        <RadioButton
            android:clickable="false"
            android:layout_gravity="center"
            android:id="@+id/sign_up_check_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textIsSelectable="false" />


    </LinearLayout>
    <View
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/md_grey_300"/>


</LinearLayout>